--- a/LaMiaPizzeria/LaMiaPizzeria.csproj
+++ b/LaMiaPizzeria/LaMiaPizzeria.csproj
@@ -7,15 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Nuova cartella1\**" />
+    <Compile Remove="Nuova cartella\**" />
     <Compile Remove="wwwroot\Nuova cartella1\**" />
     <Compile Remove="wwwroot\Nuova cartella2\**" />
     <Compile Remove="wwwroot\Nuova cartella\**" />
+    <Content Remove="Nuova cartella1\**" />
+    <Content Remove="Nuova cartella\**" />
     <Content Remove="wwwroot\Nuova cartella1\**" />
     <Content Remove="wwwroot\Nuova cartella2\**" />
     <Content Remove="wwwroot\Nuova cartella\**" />
+    <EmbeddedResource Remove="Nuova cartella1\**" />
+    <EmbeddedResource Remove="Nuova cartella\**" />
     <EmbeddedResource Remove="wwwroot\Nuova cartella1\**" />
     <EmbeddedResource Remove="wwwroot\Nuova cartella2\**" />
     <EmbeddedResource Remove="wwwroot\Nuova cartella\**" />
+    <None Remove="Nuova cartella1\**" />
+    <None Remove="Nuova cartella\**" />
     <None Remove="wwwroot\Nuova cartella1\**" />
     <None Remove="wwwroot\Nuova cartella2\**" />
     <None Remove="wwwroot\Nuova cartella\**" />
